#:schema https://json.schemastore.org/pyproject.json

[project]
name = "keyring-proxy-socket"
version = "0.1.18.7"
description = "Socket backend"
authors = [{ name = "Kalle M. Aagaard", email = "git@k-moeller.dk" }]
dependencies = [
    "keyring-proxy>=0.2.31",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Repository = "https://github.com/KalleDK/py-keyring-proxy-socket"

[project.entry-points."keyring.backends"]
SocketProxyBackend = "keyring_proxy_socket:SocketProxyBackend"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.pyright]
include = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
tools = [
    "pyright>=1.1.392.post0",
    "ruff>=0.9.3",
]
dev = [
    "keyrings-alt>=5.0.2",
]
